--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,8 +1,7 @@
-paho-mqtt==1.6.1
 flask==2.3.3
 flask-cors==4.0.0
 pandas==2.0.3
-requests==2.31.0
 matplotlib==3.7.2
 numpy==1.24.3
 PyQt5==5.15.9
+pyserial==3.5
